Fix display on mobile

--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -81,3 +81,7 @@ ol {
     margin-bottom: .6em;
   }
 }
+
+.language-text {
+  word-break: break-all !important;
+}
